--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 VARIABLES
 ================================================ */
 :root {
-    --light-green: #d5edeb;
+    --light-green: #acede7;
     --green: #63dbd0;
     --brown: #403632;
-    --light-grey: #eee;
+    --light-grey: #909090;
     --white: #fff;
     --oswald-font: 'Oswald', sans-serif;
 }
