--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @charset 'UTF-8';
 
+/* ロードアイコン */
+#container {
+    margin: 20px;
+    width: 200px;
+    height: 200px;
+    position: relative;
+  }
 /*
 VARIABLES
 ================================================ */
